refactor: extract Orchestrator from Repl
Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>